src/css/style.css
/*General*/
.navbar-inverse{
	background-color: #fff;
	border-color: #f0ecec;
}

.navbar-header{
	margin-right: 0;
	margin-left: 100px;
}

p {
	font-family: 'Crimson Text', serif;
	font-size: 1.2em;

}

/*Map Template*/
.full-width-image{
	 position: relative;
	 border-bottom: 1px solid #f0ecec;
	 padding-top: 50px;
}

.full-width-image img{
	display: block;
    width: auto;
    max-height: 80%; /* corresponds to max height of 450px */
    margin: 0 auto;
    min-height: 100px;
}

.main-map{
	padding-left: 100px;
}

.content-main-map{
	border-right: 1px solid #f0ecec;
	padding-right: 70px;
	padding-top: 100px;
}

.content-main-map img{
	max-width: 100%;
}

.sidebar-map{
}

.content-sidebar-map{
	padding-left: 10px;
	padding-right: 100px;
	padding-top: 30px;
}

.sidebar-map p{
	margin: 0;
}

.sidebar-map h1{
	padding-top: 1.2em;
	color: #ff5a52;
}

.sidebar-map h3{
	font-family: 'Source Sans Pro', sans-serif;
	font-weight: 400;
	font-size: 1em;
	line-height: 150%;
}

.sidebar-map h3::before { 
    content: "\f106";
    font-family: "FontAwesome";
 	font-weight: normal;
  	font-style: normal;
  	display: inline-block;
  	text-decoration: inherit;
  	margin-right: 3px;
  	color: #ff5a52;
}


.title{
	font-family: 'Crimson Text', serif;
	font-size: 2.5em;
	line-height: 100%;
	padding-bottom: 30px;
}

h1{
	font-family: 'Source Sans Pro', sans-serif;
	font-weight: 700;
	text-transform: uppercase;
	font-size: 1em;
	letter-spacing: 1px;
}

.main-map h1{
	padding-top: 30px;
}

h2 {
	font-family: 'Source Sans Pro', sans-serif;
	font-weight: 700;
	text-transform: uppercase;
	font-size: 1.5em;
	letter-spacing: 1px;
}

